# ms-identity-python

./: LICENSE  README.md  setup.cfg
identity/: version.py
ms_identity_python/: __init__.py  django.py  flask.py  quart.py
tests/: test_django.py  test_flask.py  test_quart.py
