# Format https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = ms-identity-python
version = attr: ms_identity_python.__version__
description = This is an authentication/authorization library, currently optimized for web apps. It provides some higher level APIs built on top of Microsoft's MSAL Python.
author = Microsoft Corporation
author_email = nugetaad@microsoft.com
url = https://github.com/Azure-Samples/microsoft-identity-python
keywords = identity, auth, authentication, authorization
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
install_requires =
    # These dependencies were tested to work with Microsoft Entra ID samples
    identity>=0.7,<0.8

# NOTE: Settings of this section below this line should not need to be changed
#packages = find:
# If this project ships namespace package, then use the next line instead.
# See also https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#using-find-namespace-or-find-namespace-packages
#
# "Treat data as a namespace package" - https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
packages = find_namespace:

include_package_data = True

[options.extras_require]
django =
    identity[django]
flask =
    identity[flask]

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=0

